--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -50,16 +50,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2025-11-05 19:26:03--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
+            "--2025-11-06 00:22:58--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
             "Resolving www.himalayandatabase.com (www.himalayandatabase.com)... 66.96.146.129\n",
             "Connecting to www.himalayandatabase.com (www.himalayandatabase.com)|66.96.146.129|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 42737250 (41M) [application/zip]\n",
             "Saving to: ‘himalaya.zip’\n",
             "\n",
-            "himalaya.zip        100%[===================>]  40.76M  1.60MB/s    in 24s     \n",
+            "himalaya.zip        100%[===================>]  40.76M  39.9MB/s    in 1.0s    \n",
             "\n",
-            "2025-11-05 19:26:27 (1.71 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
+            "2025-11-06 00:23:00 (39.9 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
             "\n"
           ]
         }
@@ -83,7 +83,7 @@
         {
           "data": {
             "text/plain": [
-              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpinv_a9ol'"
+              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmp704mesbd'"
             ]
           },
           "execution_count": 2,
@@ -117,8 +117,8 @@
         {
           "data": {
             "text/plain": [
-              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpinv_a9ol/Himalayan Database/HIMDATA/peaks.DBF',\n",
-              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpinv_a9ol/Himalayan Database/HIMDATA/exped.DBF')"
+              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmp704mesbd/Himalayan Database/HIMDATA/peaks.DBF',\n",
+              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmp704mesbd/Himalayan Database/HIMDATA/exped.DBF')"
             ]
           },
           "execution_count": 3,
@@ -520,7 +520,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "6e1f2d4a-0efd-4584-8446-db7e70aec290",
+              "ref": "7e59f173-0802-48dd-a4d1-5c0676d4f7c4",
               "rows": [
                 [
                   "0",
@@ -1278,7 +1278,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "32e2d2dd-79d2-4395-8c10-945741ee2b40",
+              "ref": "864091e3-bc99-4f4d-91e5-0c252a88a6b5",
               "rows": [
                 [
                   "10416",
@@ -2015,7 +2015,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "8f31830a-c5c5-4fae-88af-240474ab1057",
+              "ref": "12d8e16e-fdc3-4cf5-8ebc-12ef00245463",
               "rows": [
                 [
                   "0",
@@ -2839,7 +2839,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "84478f15-f112-4deb-aed4-e2952875797c",
+              "ref": "a00c9278-6102-47c6-b6e0-2262d992aec4",
               "rows": [
                 [
                   "10416",
@@ -4273,7 +4273,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "2f724842-2d49-486d-9d0e-a04382c5031f",
+              "ref": "5bd0799f-3c6e-4556-b124-f41e79cca0b0",
               "rows": [
                 [
                   "count",
@@ -4607,7 +4607,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "453576c8-557c-4399-92d2-f9cdafaa4dcd",
+              "ref": "7a735ae4-c0fb-4123-9124-9d4fefe0e0f1",
               "rows": [
                 [
                   "count",
@@ -5070,7 +5070,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "101f1eea-c1b2-4306-a729-d2cb785f3a92",
+              "ref": "977417ae-016f-49a1-80d1-4b03c3d6f6fa",
               "rows": [
                 [
                   "Kanti/Palchung",
@@ -5425,7 +5425,7 @@
                   "type": "unknown"
                 }
               ],
-              "ref": "bc4f09fc-90ae-40ab-a088-c66801d72000",
+              "ref": "56de5919-998e-4bf4-8a0c-07757375580c",
               "rows": [
                 [
                   "Annapurna",
@@ -5574,7 +5574,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "61d587a9-dc9c-4a92-a03c-2238036e96d9",
+              "ref": "df36aeb6-1b47-4329-8af9-a647227648cf",
               "rows": [
                 [
                   "Khumbu",
@@ -5767,7 +5767,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "d508955d-3686-4c7d-8ebf-497161977934",
+              "ref": "6eaf85b4-0cfc-40a2-a4a3-5fcf4d4ded66",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -5916,7 +5916,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "caaa4bf9-de0f-4a8f-8c85-cd9632f4cd71",
+              "ref": "a64a3f6f-5d0d-4d82-adfa-8a36800cb8ee",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6103,7 +6103,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "ec2a992e-02f5-4dff-8284-47df8b6b704b",
+              "ref": "bdb9ad42-0255-480e-9600-15bef93d844d",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6548,7 +6548,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_10746/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_25804/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
             "  height_distribution = pd.pivot_table(\n"
           ]
         },
@@ -6572,7 +6572,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "2ed1b5f9-a04a-4ec6-93fb-b039d70371aa",
+              "ref": "6ce587fe-99d7-4934-afef-428747042c20",
               "rows": [
                 [
                   "6000-6499",
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6800,8 +6800,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Successful expeditions using oxygen: 426 (57.49%)\n",
-            "Successful expeditions without oxygen: 343 (46.29%)\n"
+            "Successful expeditions using oxygen: 426 (57.5%)\n",
+            "Successful expeditions without oxygen: 343 (46.3%)\n",
+            "Success rate for expeditions that used oxygen: 96.2%\n",
+            "Success rate for expeditions that did not use oxygen: 59.7%\n"
           ]
         }
       ],
@@ -6848,18 +6850,31 @@
         "percentage_with_oxygen = (successful_with_oxygen / total_successful) * 100\n",
         "percentage_without_oxygen = (successful_without_oxygen / total_successful) * 100\n",
         "\n",
-        "# Print with f-strings for clarity\n",
-        "print(f\"Successful expeditions using oxygen: {successful_with_oxygen} ({percentage_with_oxygen:.2f}%)\")\n",
-        "print(f\"Successful expeditions without oxygen: {successful_without_oxygen} ({percentage_without_oxygen:.2f}%)\")\n",
+        "print(f\"Successful expeditions using oxygen: {successful_with_oxygen} ({percentage_with_oxygen:.1f}%)\")\n",
+        "print(f\"Successful expeditions without oxygen: {successful_without_oxygen} ({percentage_without_oxygen:.1f}%)\")\n",
         "\n",
         "# Climbers who used supplementary oxygen had a higher success rate.\n",
         "# Roughly 57.5% of successes involved oxygen use.\n",
-        "# Only 46.3% of successes happened without oxygen."
+        "# Only 46.3% of successes happened without oxygen.\n",
+        "\n",
+        "all_expeditions_that_used_oxygen = (exped_tidy['O2USED'] == True).sum()\n",
+        "all_expeditions_that_did_not_use_oxygen = (exped_tidy['O2NONE'] == True).sum()\n",
+        "successful_expeditions_with_oxygen = (all_expeditions_that_used_oxygen) & (total_successful)\n",
+        "successful_expeditions_without_oxygen = (all_expeditions_that_did_not_use_oxygen) & (total_successful)\n",
+        "\n",
+        "# True success rate among expeditions that used oxygen\n",
+        "success_rate_with_oxygen = successful_with_oxygen / all_expeditions_that_used_oxygen * 100\n",
+        "\n",
+        "# True success rate among expeditions that did not use oxygen\n",
+        "success_rate_without_oxygen = successful_without_oxygen / all_expeditions_that_did_not_use_oxygen * 100\n",
+        "\n",
+        "print(f\"Success rate for expeditions that used oxygen: {success_rate_with_oxygen:.1f}%\")\n",
+        "print(f\"Success rate for expeditions that did not use oxygen: {success_rate_without_oxygen:.1f}%\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -6882,7 +6897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 44,
       "metadata": {
         "id": "ZGU2cK4s1OE4"
       },
@@ -6894,7 +6909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 45,
       "metadata": {
         "id": "2-IAYltc1P6f"
       },
@@ -6906,7 +6921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 46,
       "metadata": {
         "id": "3323nhIj1PNJ"
       },
@@ -6917,7 +6932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 47,
       "metadata": {
         "id": "lOjqJIWBHNaz"
       },
